# micro-acc-systemc

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
doc/: micro.vsdx
src/: ALU.hpp  Acc.hpp  Bus.hpp  Controller.hpp  EXE.hpp  ID.hpp  IF.hpp  IR.hpp  Memory.hpp  Micro.hpp  Mux3.hpp  Mux8.hpp  PC.hpp  RegFile.hpp  System.hpp  WB.hpp
test/: ALU-test.cpp  Bus-test.cpp  Controller-test.cpp  IR-test.cpp  Memory-test.cpp  Micro-test.cpp  PC-test.cpp  RegFile-test.cpp
